examples/Passing/Variables/simple.c
int main() {
    int a = 1;
    a = a + 1;
    return a * 2;
}
