examples/Failing/Variables/fail_increment7.c
int main() {
    int a = 10;
    ++((((((1+1))))));
    return a;
}
